2001-08-07 Tuesday 19:43  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.25), src/thinp/thinp.c (1.4): Remove uncommon
	predefined sequence correction.

2001-08-07 Tuesday 19:40  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.24), include/thai/thrend.h (1.5), include/thai/tis.h
	(1.2), src/thrend/thrend.c (1.3): Fix NULL redefinition in tis.h.
	Change rendering function API to return total glyphs. Implement
	Win/Mac shaping. Implement string rendering functions.

2001-08-07 Tuesday 17:29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.23), include/thai/thrend.h (1.4),
	src/thrend/thrend.c (1.2): Treat SARA_AM cases. Add is_decomp_am
	argument to determine its appearance.  Redefine WTT "cell" for
	decomposed SARA_AM case. Add code for plain TIS rendering with
	SARA_AM concerned.

2001-08-07 Tuesday 16:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.22), include/thai/thctype.h (1.7),
	src/thctype/thctype.c (1.7), tests/test_thctype.c (1.2): Add
	consonant shapes classification in thctype, for the use of elegant
	renderers.

2001-08-06 Monday 21:08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.21), configure.in (1.12), include/thai/thrend.h
	(1.3), src/Makefile.am (1.9), src/thinp/thinp.c (1.3),
	src/thrend/.cvsignore (1.1), src/thrend/Makefile.am (1.1),
	src/thrend/thrend.c (1.1): Add partial implementation for thrend
	(cell clustering). Change cell definition (WTT hilo byte encoding
	is too complicated). Use menomic TIS character names in thinp.c.

2001-08-05 Sunday 19:42  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.20), include/thai/thinp.h (1.6), src/thinp/thinp.c
	(1.2): Change th_validate() to take more context. Define conversion
	mechanism more deliberately. Implement th_validate().

2001-08-04 Saturday 23:04  Pattara Kiatisevi <ott@linux.thai.net>

	* ChangeLog (1.19, r0_1_0): -before release 0.1.0
