@@ -1,0 +1,9 @@
+# $Id: Makefile.am,v 1.1 2001-08-08 12:39:19 thep Exp $
+MAINTAINERCLEANFILES = Makefile.in
+
+INCLUDES = -I. -I$(top_srcdir)/include
+
+noinst_LTLIBRARIES = libthcell.la
+
+libthcell_la_SOURCES = thcell.c
+
