@@ -1,3 +1,8 @@
+2001-08-08 Wednesday 11:45  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* ChangeLog (1.26), src/thrend/thrend.c (1.4): Add guards for cells
+	without base or hilo char.
+
 2001-08-07 Tuesday 19:43  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* ChangeLog (1.25), src/thinp/thinp.c (1.4): Remove uncommon
@@ -424,13 +429,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am (1.2),
 	src/thcoll/Makefile.am (1.2, r0_1_0), tests/Makefile.am (1.2): Add
-	$Id: ChangeLog,v 1.26 2001-08-08 04:45:24 thep Exp $
+	$Id: ChangeLog,v 1.27 2001-08-08 12:39:18 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_0), tests/thsort.c (1.2, r0_1_0): Add $Id: ChangeLog,v 1.26 2001-08-08 04:45:24 thep Exp $
+	r0_1_0), tests/thsort.c (1.2, r0_1_0): Add $Id: ChangeLog,v 1.27 2001-08-08 12:39:18 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
